example_workloads/policy-demo-policy.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-linux-client
  namespace: calico-demo
spec:
  selector: app == 'windows-server'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'linux-client'
